TS-4828: gcc warning comparison between signed and unsigned integer expressions